Fix small errors.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <div class="jumbotron">
+    <div id="carousel-1" class="carousel slide carousel-fade" data-ride="carousel">
     <img src="img/pitfire.jpg" alt="Photo of pizza logo." width="350px" height="280px"/>
     <h4>111 Hawthorne Blvd</h4>
     <h4>503-111-5555</h4>
     <h4>Open 11AM - 11PM Daily</h4>
   </div>
+</div>
   <div class="images">
   <img src="img/pizza.jpg" alt="Picture of mushroom pizza." width=440px; height="310px"/>
   <img src="img/pizza2.jpg" alt="Picture of server carrying pizzas." width=440px; height="310px"/>
