--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="jumbotron">
-    <img src="img/pitfire.jpg" alt="Photo of pizza logo." width="350px" height="280px"/>
+    <img src="img/Pitfire.jpg" alt="Photo of pizza logo." width="350px" height="280px"/>
     <h4>111 Hawthorne Blvd</h4>
     <h4>503-111-5555</h4>
     <h4>Open 11AM - 11PM Daily</h4>
@@ -25,7 +25,7 @@
   </blockquote>
 
 
-  <img src="img/pizza3.jpg" alt="Picture of restaurant." width=440px; height="310px"/>
+  <img src="img/pizza3.JPG" alt="Picture of restaurant." width=440px; height="310px"/>
 </div>
 
 
